<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/habitTitle"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:hint="Enter Your Title"
        app:layout_constraintBottom_toTopOf="@+id/habitDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/habitDescription"
        android:layout_width="295dp"
        android:layout_height="181dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/with_border"
        android:gravity="center_horizontal"
        android:hint="Enter Habit Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startDate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="57dp"
        android:gravity="center_horizontal"
        android:hint="Click here to select a start date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568" />

    <Switch
        android:id="@+id/geolocation"
        android:layout_width="188dp"
        android:layout_height="0dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="78dp"
        android:text="Enable Geolocation"
        android:textColorHighlight="#8C9EFF"
        android:textColorLink="#8C9EFF"
        android:thumbTint="#6200EE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/create_habit_tabs"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#00000000"
        android:text="CREATE"
        android:textColor="#6200EE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <CheckBox
        android:id="@+id/monday"
        android:onClick="onCheckboxClicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:orientation="horizontal"
        android:text="M"
        app:layout_constraintBaseline_toBaselineOf="@+id/tuesday"
        app:layout_constraintEnd_toStartOf="@+id/tuesday"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/thursday"
        android:onClick="onCheckboxClicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Th"
        app:layout_constraintEnd_toStartOf="@+id/friday"
        app:layout_constraintStart_toEndOf="@+id/wednesday"
        app:layout_constraintTop_toBottomOf="@+id/startDate" />

    <CheckBox
        android:id="@+id/wednesday"
        android:onClick="onCheckboxClicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="W"
        app:layout_constraintBaseline_toBaselineOf="@+id/thursday"
        app:layout_constraintEnd_toStartOf="@+id/thursday"
        app:layout_constraintStart_toEndOf="@+id/tuesday" />

    <CheckBox
        android:id="@+id/friday"
        android:onClick="onCheckboxClicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="F"
        app:layout_constraintBaseline_toBaselineOf="@+id/thursday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/thursday" />

    <CheckBox
        android:id="@+id/tuesday"
        android:onClick="onCheckboxClicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="T"
        app:layout_constraintEnd_toStartOf="@+id/wednesday"
        app:layout_constraintStart_toEndOf="@+id/monday"
        app:layout_constraintTop_toTopOf="@+id/wednesday" />

    <CheckBox
        android:id="@+id/saturday"
        android:onClick="onCheckboxClicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="S"
        app:layout_constraintEnd_toStartOf="@+id/sunday"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tuesday" />

    <CheckBox
        android:id="@+id/sunday"
        android:onClick="onCheckboxClicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Su"
        app:layout_constraintBaseline_toBaselineOf="@+id/saturday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saturday" />


</androidx.constraintlayout.widget.ConstraintLayout>