<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/addhabitscreen"
    tools:context=".Activities.AddHabit.AddHabitBaseFragment">


    <EditText
        android:id="@+id/fragmentHabitTitle"
        android:layout_width="299dp"
        android:layout_height="37dp"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        android:hint="Enter Your Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <EditText
        android:id="@+id/fragmentHabitDescription"
        android:layout_width="295dp"
        android:layout_height="181dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        android:hint="Enter Habit Description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentHabitTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/fragmentStartDate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="57dp"
        android:gravity="center_horizontal"
        android:hint="Click here to select a start date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentHabitDescription"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/fragmentWednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="W"
        app:layout_constraintBaseline_toBaselineOf="@+id/fragmentThursday"
        app:layout_constraintEnd_toStartOf="@+id/fragmentThursday"
        app:layout_constraintStart_toEndOf="@+id/fragmentTuesday" />

    <CheckBox
        android:id="@+id/fragmentSunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="Su"
        app:layout_constraintBaseline_toBaselineOf="@+id/fragmentSaturday"
        app:layout_constraintStart_toEndOf="@+id/fragmentSaturday" />

    <CheckBox
        android:id="@+id/fragmentSaturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:text="S"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentTuesday" />

    <CheckBox
        android:id="@+id/fragmentThursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Th"
        app:layout_constraintEnd_toStartOf="@+id/fragmentFriday"
        app:layout_constraintStart_toEndOf="@+id/fragmentWednesday"
        app:layout_constraintTop_toBottomOf="@+id/fragmentStartDate" />

    <CheckBox
        android:id="@+id/fragmentTuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="T"
        app:layout_constraintEnd_toStartOf="@+id/fragmentWednesday"
        app:layout_constraintStart_toEndOf="@+id/fragmentMonday"
        app:layout_constraintTop_toTopOf="@+id/fragmentWednesday" />

    <CheckBox
        android:id="@+id/fragmentMonday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:orientation="horizontal"
        android:text="M"
        app:layout_constraintBaseline_toBaselineOf="@+id/fragmentTuesday"
        app:layout_constraintEnd_toStartOf="@+id/fragmentTuesday"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/fragmentFriday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="F"
        app:layout_constraintBaseline_toBaselineOf="@+id/fragmentThursday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fragmentThursday" />

    <Switch
        android:id="@+id/publicHabit"
        android:layout_width="241dp"
        android:layout_height="0dp"
        android:text="Enable As A Public Habit"
        android:textColorHighlight="#8C9EFF"
        android:textColorLink="#8C9EFF"
        android:thumbTint="#6200EE"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>