<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginscrn"
    >


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="326dp" />

    <Button
        android:id="@+id/LoginBTN"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="193dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="LOGIN"
        app:layout_constraintBottom_toTopOf="@+id/RegisterBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login" />

    <Button
        android:id="@+id/RegisterBTN"
        android:layout_width="195dp"
        android:layout_height="48dp"
        android:layout_marginStart="109dp"

        android:layout_marginEnd="107dp"
        android:layout_marginBottom="139dp"
        android:text="Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginBTN" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="259dp"
        android:layout_height="61dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/password_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="267dp"
        android:layout_height="64dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/LoginBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_login" />
            />
    <!-- for google button... -->
    <com.google.android.gms.common.SignInButton
        android:id="@+id/signIn_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="82dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterBTN" />


</androidx.constraintlayout.widget.ConstraintLayout>